# projet_kg_wiki

./: .env.example  .gitignore  .pylintrc  ARCHITECTURE.md  DEMO_GUIDE.md  Dockerfile  HOW_IT_WORKS.md  Makefile  PRESENTATION_REPORT.md  README.md  demo.ipynb  docker-compose.yml  load_database.sh  main.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  test_demo.sh
.github/workflows/: docker.yml  lint.yml  test.yml
app/: main.py
app/database/: __init__.py  neo4j.py
app/models/: config.py  schemas.py
app/routers/: advanced_router.py  graph_router.py
app/services/: neo4j_service.py
data/: communities.csv  eda.ipynb
data/animals/db_modelisation/: 01_load_db.cypher
data/import/: article.csv
data/query_wikiperdia/: README.md  retrieve.py
data/query_wikiperdia/db_modelisation/: 01_load_db.cypher  02_example_queries.cypher
data/query_wikiperdia/import/: article_authors.csv  article_links.csv  article_topics.csv  articles.csv  authors.csv  related_topics.csv  tags.csv  topic_hierarchy.csv  topic_tags.csv  topics.csv
db_modelisation/: 01_load_db.cypher
scripts/: load_db.py
tests/: __init__.py  conftest.py  test_advanced_router.py  test_database.py  test_graph_router.py  test_main.py
